Reset text box on message sent + overflow fix

--- a/project-3/frontend/scss/app.scss
+++ b/project-3/frontend/scss/app.scss
@@ -46,6 +46,7 @@ main {
     flex: 1;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 section {
